Fixing mock auth issue

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-        <title>Svelte starter kit</title>
+        <title>Svelte Jetpack</title>
         <base href="/">
     </head>
     <body>
