Adding base css Adding date picker demo

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-        <title>Svelte Jetpack</title>
-        <base href="/">
+      <title>Svelte Jetpack</title>
+      <base href="/">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+      <link href="styles.css" rel="stylesheet">
     </head>
     <body>
       <div>
