added build script and folder structure

--- a/src/modules/App/App.html
+++ b/src/modules/App/App.html
@@ -1,3 +1,5 @@
+<img src="/assets/svelte-logo.png">
+
 <div>
   <h2>Authenticated App <small><a href="{{ asr.makePath('signIn') }}">Log out</a></small></h2>
   <uiView></uiView>
