Adding tooltip demo

--- a/src/modules/Dashboard/Dashboard.html
+++ b/src/modules/Dashboard/Dashboard.html
@@ -21,6 +21,11 @@
         Auto Complete
       </a>
     </li>
+    <li>
+      <a href="{{ asr.makePath('app.toolTip') }}">
+        Tool Tip
+      </a>
+    </li>
   </ul>
 
   <p>
