Starting to add I18N

--- a/src/modules/SignIn/SignIn.html
+++ b/src/modules/SignIn/SignIn.html
@@ -1,3 +1,5 @@
+<h1>{{ translate.t('signin:formTitle') }}</h1>
+
 <p>Any user/password combo works...</p>
 
 <form on:submit='handleSubmit(event)'>
@@ -7,8 +9,10 @@
 </form>
 
 <script>
+  import './locales';
   import auth from '../../services/auth';
   import router from '../../services/router';
+  import translate from '../../services/translate';
 
   export default {
     data() {
@@ -38,6 +42,9 @@
 
         });
       }
+    },
+    helpers: {
+      translate
     }
   }
 </script>
