streamlined webpack config setup

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       <base href="/">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link href="styles.css" rel="stylesheet">
+      <link href="bundle.css" rel="stylesheet">
     </head>
     <body>
       <div>
@@ -12,6 +13,6 @@
         <main></main>
       </div>
 
-      <script src="index.js"></script>
+      <script src="bundle.js"></script>
     </body>
 </html>
