Create separate Internationalisation demo

--- a/src/modules/Dashboard/Dashboard.html
+++ b/src/modules/Dashboard/Dashboard.html
@@ -26,6 +26,11 @@
         Tool Tip
       </a>
     </li>
+    <li>
+      <a href="{{ asr.makePath('app.internationalisation') }}">
+        Internationalisation
+      </a>
+    </li>
   </ul>
 
   <p>
