--- a/src/modules/Shared/Sortable/Sortable.html
+++ b/src/modules/Shared/Sortable/Sortable.html
@@ -67,17 +67,17 @@
     height: 300px;
   }
 
-  .item-full {
+  ref:item-full {
     width: 1160px;
     height: 450px;
   }
 
-  .sortable-ghost {
+  ref:sortable-ghost {
     background: yellow;
     opacity: 0.4;
   }
 
-  .sortable-ghost * {
+  .item_sortable-ghost * {
     visibility: hidden;
   }
 
