--- a/src/modules/Shared/Sortable/Sortable.html
+++ b/src/modules/Shared/Sortable/Sortable.html
@@ -4,41 +4,14 @@
   <p>Order: {{ widgets.toString() }}</p>
 
   <div id="grid" class="grid">
-    <div class="item">
+    {{ #each widgets as widget, i }}
+    <div class='item {{widget.wide ? "item-full" : ""}}'>
+      {{ widget.wide }}
       <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
+      <div class="item_sm" title="Minimise" on:click="minimise(event, i)"></div>
+      <div class="item_lg" title="Maximise" on:click="maximise(event, i)"></div>
     </div>
-
-    <div class="item">
-      <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
-    </div>
-
-    <div class="item">
-      <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
-    </div>
-
-    <div class="item">
-      <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
-    </div>
-
-    <div class="item">
-      <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
-    </div>
-
-    <div class="item">
-      <div class="item_handle"></div>
-      <div class="item_sm" title="Minimise" on:click="minimise(event)"></div>
-      <div class="item_lg" title="Maximise" on:click="maximise(event)"></div>
-    </div>
+    {{/each }}
   </div>
 </div>
 
@@ -65,6 +38,11 @@
     margin: 10px;
     width: 570px;
     height: 300px;
+  }
+
+  :global(.item-full) {
+    width: 1160px !important;
+    height: 450px !important;
   }
 
   .item-full {
@@ -132,7 +110,7 @@
   export default {
     data() {
       return {
-        widgets: [1,2,3,4,5,6]
+        widgets: [ {wide: false }, {wide: false }, {wide: false }, {wide: false }, {wide: false }, {wide: false }]
       };
     },
     oncreate() {
@@ -150,14 +128,21 @@
       Sortable.utils.on(this.grid.el, 'sort', this.onSort.bind(this));
     },
     methods: {
-      minimise(event) {
-        const widget = event.target.parentElement;
-        widget.classList.remove('item-full');
+      minimise(event, index) {
+        // const widget = event.target.parentElement;
+        // widget.classList.remove('item-full');
+        const widgets = this.get('widgets');
+        widgets[index].wide = false;
+        this.set({ widgets });
       },
-      maximise(event) {
-        const widget = event.target.parentElement;
-        widget.classList.add('item-full');
+      maximise(event, index) {
+        // const widget = event.target.parentElement;
+        // widget.classList.add('item-full');
+        const widgets = this.get('widgets');
+        widgets[index].wide = true;
+        this.set({ widgets });
       },
+
       onSort(event) {
         const widgets = [...this.get('widgets')];
         widgets.splice(event.newIndex, 0, widgets.splice(event.oldIndex, 1)[0]);
