sortable clean up, uncommented style linter

--- a/src/modules/Shared/Sortable/Sortable.html
+++ b/src/modules/Shared/Sortable/Sortable.html
@@ -6,7 +6,6 @@
   <div id="grid" class="grid">
     {{ #each widgets as widget, i }}
     <div class='item {{widget.wide ? "item-full" : ""}}'>
-      {{ widget.wide }}
       <div class="item_handle"></div>
       <div class="item_sm" title="Minimise" on:click="minimise(event, i)"></div>
       <div class="item_lg" title="Maximise" on:click="maximise(event, i)"></div>
@@ -38,11 +37,6 @@
     margin: 10px;
     width: 570px;
     height: 300px;
-  }
-
-  :global(.item-full) {
-    width: 1160px !important;
-    height: 450px !important;
   }
 
   .item-full {
@@ -110,8 +104,8 @@
   export default {
     data() {
       return {
-        widgetOrder: [0,1,2,3,4,5],
-        widgets: [ {wide: false }, {wide: false }, {wide: false }, {wide: false }, {wide: false }, {wide: false }]
+        widgetOrder: [0, 1, 2, 3, 4, 5],
+        widgets: [{wide: false}, {wide: false}, {wide: false}, {wide: false}, {wide: false}, {wide: false}]
       };
     },
     oncreate() {
@@ -120,7 +114,7 @@
         fallbackTolerance: 50,
         animation: 150,
         onMove(event) {
-          if(event.willInsertAfter === undefined) {
+          if (event.willInsertAfter === undefined) {
             return false;
           }
         }
@@ -130,18 +124,14 @@
     },
     methods: {
       minimise(event, index) {
-        // const widget = event.target.parentElement;
-        // widget.classList.remove('item-full');
         const widgets = this.get('widgets');
         widgets[index].wide = false;
-        this.set({ widgets });
+        this.set({widgets});
       },
       maximise(event, index) {
-        // const widget = event.target.parentElement;
-        // widget.classList.add('item-full');
         const widgets = this.get('widgets');
         widgets[index].wide = true;
-        this.set({ widgets });
+        this.set({widgets});
       },
 
       onSort(event) {
