Add multiple demos for types of selects

--- a/src/modules/Dashboard/Dashboard.html
+++ b/src/modules/Dashboard/Dashboard.html
@@ -17,11 +17,6 @@
       </a>
     </li>
     <li>
-      <a href="{{ asr.makePath('app.autoComplete') }}">
-        Auto Complete
-      </a>
-    </li>
-    <li>
       <a href="{{ asr.makePath('app.toolTip') }}">
         Tool Tip
       </a>
@@ -29,6 +24,21 @@
     <li>
       <a href="{{ asr.makePath('app.internationalisation') }}">
         Internationalisation
+      </a>
+    </li>
+    <li>
+      <a href="{{ asr.makePath('app.customSelect') }}">
+        Custom Select
+      </a>
+    </li>
+    <li>
+      <a href="{{ asr.makePath('app.multiSelect') }}">
+        Multi Select
+      </a>
+    </li>
+    <li>
+      <a href="{{ asr.makePath('app.autoComplete') }}">
+        Auto Complete
       </a>
     </li>
   </ul>
