Adding gulp component generator

--- a/src/modules/Shared/Sortable/Sortable.html
+++ b/src/modules/Shared/Sortable/Sortable.html
@@ -136,7 +136,32 @@
     data() {
       return {
         widgetOrder: [0, 1, 2, 3, 4, 5],
-        widgets: [{wide: false}, {wide: false}, {wide: false}, {wide: false}, {wide: false}, {wide: false}]
+        widgets: [
+          {
+            wide: false,
+            order: 0
+          },
+          {
+            wide: false,
+            order: 1
+          },
+          {
+            wide: false,
+            order: 2
+          },
+          {
+            wide: false,
+            order: 3
+          },
+          {
+            wide: false,
+            order: 4
+          },
+          {
+            wide: false,
+            order: 5
+          }
+        ]
       };
     },
     oncreate() {
